[gd_scene load_steps=5 format=2]

[ext_resource path="res://Helpers/Transitioner.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menus/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://fontDump/headerFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Menus/Settings/SubMenus/BaseSubSetting/BaseSubSettings.gd" type="Script" id=4]

[node name="SubSetting" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/separation = 15

[node name="Title" type="Label" parent="MarginContainer/Rows" groups=[
"translate",
]]
margin_right = 984.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 3 )
text = "SubSettings"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Rows"]
margin_top = 83.0
margin_right = 984.0
margin_bottom = 404.0
size_flags_vertical = 3

[node name="Options" type="VBoxContainer" parent="MarginContainer/Rows/ScrollContainer"]
margin_left = 492.0
margin_right = 492.0
margin_bottom = 321.0
size_flags_horizontal = 6
size_flags_vertical = 3
alignment = 1

[node name="btnApply" type="Button" parent="MarginContainer/Rows" groups=[
"translate",
]]
margin_top = 419.0
margin_right = 984.0
margin_bottom = 456.0
text = "settings.apply"

[node name="btnSave" type="Button" parent="MarginContainer/Rows" groups=[
"translate",
]]
margin_top = 471.0
margin_right = 984.0
margin_bottom = 508.0
text = "settings.exitandsave"

[node name="btnNoSave" type="Button" parent="MarginContainer/Rows" groups=[
"translate",
]]
margin_top = 523.0
margin_right = 984.0
margin_bottom = 560.0
text = "settings.exitwithoutsaving"

[node name="Transitioner" parent="." instance=ExtResource( 1 )]
visible = false
[connection signal="pressed" from="MarginContainer/Rows/btnApply" to="." method="_on_btnApply_pressed"]
[connection signal="pressed" from="MarginContainer/Rows/btnSave" to="." method="_on_btnSave_pressed"]
[connection signal="pressed" from="MarginContainer/Rows/btnNoSave" to="." method="_on_btnNoSave_pressed"]
[connection signal="transition_finished" from="Transitioner" to="." method="_on_Transitioner_transition_finished"]
